@@ -89,6 +89,7 @@ Changes in Bitbake 1.9.x:
 	- Add support for "-e target" (#3432)
 	- Fix shell showdata command (#3259)
 	- Fix shell data updating problems (#1880)
+	- Properly raise errors for invalid source URI protocols
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
